<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2C2C"
    tools:context="com.jorch.pruebafacebook.ui.LoginActivity">
    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/login_subTitle"
        app:layout_constraintTop_toTopOf="@+id/login_subTitle">
    </ProgressBar>

    <ImageView
        android:id="@+id/login_title"
        android:layout_width="318dp"
        android:layout_height="235dp"
        android:layout_marginBottom="43dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/login_subTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_subTitle"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:background="@color/alphaTransparency"
        android:text="@string/start_session_to_see_private_area"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/material_color_5"
        android:layout_marginBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/login_signInFacebook_btn"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/login_signInFacebook_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/com_facebook_blue"
        android:drawableLeft="@drawable/com_facebook_button_login_logo"
        android:text="@string/start_with_facebook"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/login_email_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"></Button>

    <Button
        android:id="@+id/login_email_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:drawableLeft="@mipmap/ic_dialog_email"
        android:backgroundTint="@color/white"
        android:text="@string/start_with_mail"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/login_view_decorator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        ></Button>
    <View
        android:id="@+id/login_view_decorator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/login_register_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </View>
    <Button
        android:id="@+id/login_register_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:backgroundTint="@color/material_color_5"
        android:text="@string/create_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>

    <Button
        android:id="@+id/login_signOut_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/material_color_1"
        android:text="@string/close_session"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>